IE featured dataset width ratio fix, IE remove browser default clear input, IE fix alignment of clear button, remove Firefox default dotted line weirdness on focus, clean up search field styles and height alignments cross-browser/cross-font, tabs flex 100% width, horizontally center image of featured datasets

--- a/client/src/page.css
+++ b/client/src/page.css
@@ -28,3 +28,13 @@ a:hover,
 button:hover {
   cursor: pointer;
 }
+
+/* remove IE default input clear button since we handle this ourselves  */
+input::-ms-clear {
+  display: none;
+}
+
+/* try to remove firefox default dotted line on focus since we handle this ourselves */
+::-moz-focus-inner {
+  border: 0;
+}
